--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.3",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
@@ -20,6 +21,12 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "subscriptions-transport-ws": "^0.11.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ws": "^8.16.0"
   }
 }
