--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0",
     "sequelize": "^6.37.1",
     "socket.io": "^4.7.4",
     "subscriptions-transport-ws": "^0.11.0"
